--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ g<!DOCTYPE html>
     <title>My Website</title>
 </head>
 <body>
-    <h1>Hello its me Brian Dulay!</h1>
+    <h1>Hello Brian Dulay!</h1>
+    <p> YOU ARE SO HANDSOME! </p>
 </body>
-<
+</html>
